--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -1,225 +1,256 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visualizador de Markdown</title>
-    <style>
-      /* Estilos básicos para mejorar la visualización del markdown */
 
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        color: #2c3e50;
-        margin-top: 24px;
-        margin-bottom: 16px;
-      }
-      ul {
-        margin: 10px 0;
-      }
-      li {
-        text-decoration: none;
-        margin-left: 25px;
-      }
-      code {
-        background-color: #f5f5f5;
-        border-radius: 3px;
-        font-family: monospace;
-      }
-      pre {
-        background-color: #f5f5f5;
-        padding: 16px;
-        border-radius: 3px;
-        margin: 20px 0;
-        overflow: auto;
-      }
-      blockquote {
-        border-left: 4px solid #ddd;
-        padding-left: 16px;
-        color: #666;
-      }
-      a {
-        color: #3498db;
-        text-decoration: none;
-      }
-      p {
-        margin: 10px 0;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Visualizador de Markdown</title>
+  <style>
+    /* Estilos básicos para mejorar la visualización del markdown */
 
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: #2c3e50;
+      margin-top: 24px;
+      margin-bottom: 16px;
+    }
 
-      body {
-        display: flex;
-        height: 100vh;
-        background-color: #f5f5f5;
-      }
+    ul {
+      margin: 10px 0;
+    }
 
-      /* Menú vertical */
-      .menu-vertical {
-        width: 30%;
-        background-color: #2c3e50;
-        color: white;
-        padding: 20px;
-        overflow-y: auto;
-        background: url("/images/background.jpg") no-repeat center center fixed;
-      }
+    li {
+      text-decoration: none;
+      margin-left: 25px;
+    }
 
-      .menu-vertical ul {
-        height: 400px;
-        overflow-y: scroll;
-      }
+    code {
+      background-color: #f5f5f5;
+      border-radius: 3px;
+      font-family: monospace;
+    }
 
-      .menu-vertical ul::-webkit-scrollbar {
-        display: none;
-      }
+    pre {
+      background-color: #f5f5f5;
+      padding: 16px;
+      border-radius: 3px;
+      margin: 20px 0;
+      overflow: auto;
+    }
 
-      .menu-header {
-        padding-bottom: 10px;
-        border-bottom: 1px solid #34495e;
-        margin-bottom: 20px;
-        text-align: center;
-      }
+    blockquote {
+      border-left: 4px solid #ddd;
+      padding-left: 16px;
+      color: #666;
+    }
 
-      .menu-title {
-        font-size: 2rem;
-        margin-bottom: 10px;
-        letter-spacing: 2px;
-        background: url("/images/logo.jpg") no-repeat center center fixed;
-      }
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
 
-      .menu-search {
-        width: 100%;
-        padding: 8px;
-        border-radius: 4px;
-        border: none;
-        background-color: #34495e;
-        color: white;
-      }
+    p {
+      margin: 10px 0;
+    }
 
-      .menu-items {
-        list-style: none;
-      }
+    a:hover {
+      text-decoration: underline;
+    }
 
-      .menu-item {
-        padding: 10px;
-        border-radius: 4px;
-        margin-bottom: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-      }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-      .menu-item:hover {
-        background-color: #1d66e0;
-      }
+    body {
+      display: flex;
+      height: 100vh;
+      background-color: #f5f5f5;
+    }
 
-      .menu-item.active {
-        background-color: #1d66e0;
-        font-weight: bold;
+    /* Menú vertical */
+    .menu-vertical {
+      width: 30%;
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      overflow-y: auto;
+      background: url("/images/background.jpg") no-repeat center center fixed;
+    }
+
+    .menu-vertical ul {
+      height: 400px;
+      overflow-y: scroll;
+    }
+
+    .menu-vertical ul::-webkit-scrollbar {
+      display: none;
+    }
+
+    .menu-header {
+      padding-bottom: 10px;
+      border-bottom: 1px solid #34495e;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .menu-title {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      letter-spacing: 2px;
+      background: url("/images/logo.jpg") no-repeat center center fixed;
+    }
+
+    .menu-search {
+      width: 100%;
+      padding: 8px;
+      border-radius: 4px;
+      border: none;
+      background-color: #34495e;
+      color: white;
+    }
+
+    .menu-items {
+      list-style: none;
+    }
+
+    .menu-item {
+      padding: 10px;
+      border-radius: 4px;
+      margin-bottom: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .menu-item:hover {
+      background-color: #1d66e0;
+    }
+
+    .menu-item.active {
+      background-color: #1d66e0;
+      font-weight: bold;
+    }
+
+    /* Contenedor de markdown */
+    .markdown-container {
+      width: 70%;
+      padding: 20px 30px;
+      overflow-y: auto;
+      background-color: white;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .take-test-button {
+      font-weight: bold;
+      background-color: #44d17e;
+      /* Button color */
+      color: #2c2c2c;
+      /* Text color */
+      border: none;
+      /* Remove default border */
+      padding: 12px 24px;
+      /* Vertical and horizontal padding */
+      text-align: center;
+      /* Center text */
+      text-decoration: none;
+      /* Remove underline */
+      display: inline-block;
+      /* Allow setting dimensions */
+      font-size: 16px;
+      /* Text size */
+      margin: 4px 2px;
+      /* Some spacing */
+      cursor: pointer;
+      /* Change cursor on hover */
+      border-radius: 4px;
+      /* Slightly rounded corners */
+      box-shadow: none;
+      /* No shadow for flat design */
+      transition: background-color 0.3s ease;
+      /* Smooth hover effect */
+      position: absolute;
+      bottom: 20px;
+      width: 27%;
+    }
+  </style>
+  <script>
+    async function testAuth() {
+      const response = await fetch(
+        `${window.location.protocol}//${window.location.host
+        }/verify-token/${localStorage.getItem("minibit-token")}`
+      );
+      if (!response.ok) {
+        window.location.href = "/";
       }
-      /* Contenedor de markdown */
-      .markdown-container {
-        width: 70%;
-        padding: 20px 30px;
-        overflow-y: auto;
-        background-color: white;
-        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-      }
-      .take-test-button {
-        font-weight: bold;
-        background-color: #44d17e; /* Button color */
-        color: #2c2c2c; /* Text color */
-        border: none; /* Remove default border */
-        padding: 12px 24px; /* Vertical and horizontal padding */
-        text-align: center; /* Center text */
-        text-decoration: none; /* Remove underline */
-        display: inline-block; /* Allow setting dimensions */
-        font-size: 16px; /* Text size */
-        margin: 4px 2px; /* Some spacing */
-        cursor: pointer; /* Change cursor on hover */
-        border-radius: 4px; /* Slightly rounded corners */
-        box-shadow: none; /* No shadow for flat design */
-        transition: background-color 0.3s ease; /* Smooth hover effect */
-        position: absolute;
-        bottom: 20px;
-        width: 27%;
-      }
-    </style>
-    <script>
-      async function testAuth() {
-        const response = await fetch(
-          `${window.location.protocol}//${
-            window.location.host
-          }/verify-token/${localStorage.getItem("minibit-token")}`
-        );
-        if (!response.ok) {
-          window.location.href = "/";
+    }
+    async function takeTest() {
+      const url = window.location.href;
+      const response = await fetch(
+        `${window.location.protocol}//${window.location.host}/check-exam-date`,
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            token: localStorage.getItem("minibit-token"),
+            tech: url,
+          }),
         }
-      }
-      function takeTest() {
+      );
+      if (!response.ok) {
+        alert("No puedes rendir este examen. Debe pasar un mes desde tu ultima vez.")
+      } else {
         window.location.href = "/exam/" + defineTech();
       }
-      function navigateTo(url) {
-        window.location.href = url;
-      }
-      function defineTech() {
-        const url = window.location.href;
-        if (url.includes("javascript")) return "Javascript";
-        if (url.includes("typescript")) return "Typescript";
-        if (url.includes("design_patterns")) return "Patrones Diseño OOP";
-      }
+    }
+    async function navigateTo(url) {
+      window.location.href = url;
+    }
+    function defineTech() {
+      const url = window.location.href;
+      if (url.includes("javascript")) return "Javascript";
+      if (url.includes("typescript")) return "Typescript";
+      if (url.includes("design_patterns")) return "Patrones Diseño OOP";
+    }
 
-      setTimeout(() => {
-        document.getElementById("take-test-button-id").innerHTML =
-          "Evaluacion " + defineTech();
-        testAuth();
-      }, 500);
-    </script>
-  </head>
-  <body>
-    <nav class="menu-vertical">
-      <div class="menu-header">
-        <img
-          id="logo-img"
-          width="150px"
-          src="http://localhost:3000/images/logo.png"
-          style="border-radius: 10px"
-        />
-      </div>
-      <ul class="menu-items">
-        <li
-          onclick="navigateTo('/content/javascript/1')"
-          class="menu-item active"
-          id="menu-item-javascript"
-        >
-          Javascript
-        </li>
-        <li onclick="navigateTo('/content/typescript/1')" class="menu-item">
-          Typescript
-        </li>
-        <li
-          onclick="navigateTo('/content/design_patterns/1')"
-          class="menu-item"
-        >
-          Patrones de Diseño
-        </li>
-      </ul>
-      <button
-        onclick="takeTest()"
-        class="take-test-button"
-        id="take-test-button-id"
-      ></button>
-    </nav>
-    <main class="markdown-container"><%- content %></main>
-  </body>
+    function setActive(tech) {
+      return url.includes(tech) && "active"
+    }
+
+    setTimeout(() => {
+      document.getElementById("take-test-button-id").innerHTML =
+        "Evaluacion " + defineTech();
+      testAuth();
+    }, 500);
+  </script>
+</head>
+
+<body>
+  <nav class="menu-vertical">
+    <div class="menu-header">
+      <img id="logo-img" width="150px" src="http://localhost:3000/images/logo.png" style="border-radius: 10px" />
+    </div>
+    <ul class="menu-items">
+      <li onclick="navigateTo('/content/javascript/1')" class="menu-item" id="menu-item-javascript">
+        Javascript
+      </li>
+      <li onclick="navigateTo('/content/typescript/1')" class="menu-item">
+        Typescript
+      </li>
+      <li onclick="navigateTo('/content/design_patterns/1')" class="menu-item">
+        Patrones de Diseño
+      </li>
+    </ul>
+    <button onclick="takeTest()" class="take-test-button" id="take-test-button-id"></button>
+  </nav>
+  <main class="markdown-container"><%- content %></main>
+</body>
+
 </html>
