--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -140,7 +140,7 @@
     </style>
     <script>
       function navigateTo() {
-        window.location.href = "/content/javascript/1";
+        window.location.href = "/content/javascript";
       }
     </script>
   </head>
