--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,143 +1,204 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: url("/images/background.jpg") no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    .login-container {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 40px;
+      width: 350px;
+      text-align: center;
+    }
+
+    .logo {
+      color: #ff6600;
+      /* Color naranja similar al logo Orange */
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
+    .logo::after {
+      content: "®";
+      font-size: 12px;
+      vertical-align: super;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+      text-align: left;
+    }
+
+    .input-group label {
+      display: block;
+      margin-bottom: 8px;
+      color: #555;
+      font-size: 12px;
+    }
+
+    .input-group input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 12px;
+    }
+
+    .login-button {
+      background-color: #3e47f5;
+      color: white;
+      border: none;
+      padding: 12px;
+      width: 100%;
+      border-radius: 4px;
+      font-size: 12px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .admin-button {
+      background-color: #00E1B4;
+      color: white;
+      border: none;
+      padding: 12px;
+      margin-top: 15px;
+      width: 100%;
+      border-radius: 4px;
+      font-size: 12px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .login-button:hover {
+      font-weight: bold;
+    }
+
+    .admin-group {
+      margin-top: 10px;
+      display: none;
+    }
+  </style>
+  <script>
+    function navigateTo(url) {
+      window.location.href = "/content/javascript";
+    }
+    async function login() {
+      const email = document.getElementById("email").value || "";
+      const password = document.getElementById("password").value || "";
+
+      if (!email || !password) {
+        alert("Datos incorrectos");
+        return;
       }
 
-      body {
-        background-color: #f5f5f5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background: url("/images/background.jpg") no-repeat center center fixed;
-        background-size: cover;
-      }
-
-      .login-container {
-        background-color: white;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 40px;
-        width: 350px;
-        text-align: center;
-      }
-
-      .logo {
-        color: #ff6600; /* Color naranja similar al logo Orange */
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 30px;
-      }
-
-      .logo::after {
-        content: "®";
-        font-size: 12px;
-        vertical-align: super;
-      }
-
-      .input-group {
-        margin-bottom: 20px;
-        text-align: left;
-      }
-
-      .input-group label {
-        display: block;
-        margin-bottom: 8px;
-        color: #555;
-        font-size: 12px;
-      }
-
-      .input-group input {
-        width: 100%;
-        padding: 12px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 12px;
-      }
-
-      .login-button {
-        background-color: #3e47f5;
-        color: white;
-        border: none;
-        padding: 12px;
-        width: 100%;
-        border-radius: 4px;
-        font-size: 12px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-      }
-
-      .login-button:hover {
-        font-weight: bold;
-      }
-    </style>
-    <script>
-      function navigateTo(url) {
-        window.location.href = "/content/javascript/1";
-      }
-      async function login() {
-        const email = document.getElementById("email").value || "";
-        const password = document.getElementById("password").value || "";
-
-        if (!email || !password) {
-          alert("Datos incorrectos");
-          return;
-        }
-
-        try {
-          const response = await fetch(
-            `${window.location.protocol}//${window.location.host}/login`,
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                email: email,
-                password: password,
-              }),
-            }
-          );
-
-          if (!response.ok) {
-            alert("Lo sentimos, algo falló.");
-            return
+      try {
+        const response = await fetch(
+          `${window.location.protocol}//${window.location.host}/login`,
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              email: email,
+              password: password,
+            }),
           }
+        );
 
-          const data = await response.json();
-          localStorage.setItem("minibit-token", data.token);
-          window.location.href = "/content/javascript/1";
-        } catch (error) {
+        if (!response.ok) {
           alert("Lo sentimos, algo falló.");
+          return
+        }
+
+        const data = await response.json();
+        localStorage.setItem("minibit-token", data.token);
+        window.location.href = "/content/javascript/" + data.token;
+      } catch (error) {
+        alert("Lo sentimos, algo falló.");
+      }
+    }
+    function showAdminInput() {
+      document.getElementById("admin-passphrase-group").style.display = "block"
+    }
+
+
+
+    window.addEventListener("keydown", async (event) => {
+      if (event.key === "Enter") {
+        if (document.getElementById("admin-passphrase").value) {
+          try {
+            const response = await fetch(
+              `${window.location.protocol}//${window.location.host}/login-admin`,
+              {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                  passphrase: document.getElementById("admin-passphrase").value,
+                }),
+              }
+            );
+
+            if (!response.ok) {
+              alert("Lo sentimos, algo falló.");
+              return
+            }
+
+            const data = await response.json();
+            localStorage.setItem("minibit-token", data.token);
+            window.location.href = "/admin/" + data.token;
+          } catch (error) {
+            alert("Lo sentimos, algo falló.");
+          }
         }
       }
-    </script>
-  </head>
-  <body>
-    <div class="login-container">
-      <div class="input-group">
-        <label for="username">Email</label>
-        <input type="text" id="email" placeholder="Ingrese su email" />
-      </div>
+    });
 
-      <div class="input-group">
-        <label for="password">Contraseña</label>
-        <input
-          type="password"
-          id="password"
-          placeholder="Ingrese su contraseña"
-        />
-      </div>
+  </script>
+</head>
 
-      <button onclick="login()" class="login-button">Login</button>
+<body>
+  <div class="login-container">
+    <div class="input-group">
+      <label for="username">Email</label>
+      <input type="text" id="email" placeholder="Ingrese su email" />
     </div>
-  </body>
+
+    <div class="input-group">
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" placeholder="Ingrese su contraseña" />
+    </div>
+
+    <button onclick="login()" class="login-button">Login</button>
+    <button onclick="showAdminInput()" class="admin-button">Soy Admin</button>
+
+    <div class="input-group admin-group" id="admin-passphrase-group">
+      <input type="password" id="admin-passphrase" placeholder="Ingrese clave" />
+    </div>
+  </div>
+</body>
+
 </html>
