--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -190,7 +190,7 @@
       }
     }
     async function takeTest() {
-      const url = window.location.href;
+      const tech = window.location.pathname.split("/")[2]
       const response = await fetch(
         `${window.location.protocol}//${window.location.host}/check-exam-date`,
         {
@@ -200,14 +200,15 @@
           },
           body: JSON.stringify({
             token: localStorage.getItem("minibit-token"),
-            tech: url,
+            tech: tech,
           }),
         }
       );
       if (!response.ok) {
+        window.location.href = "/exam/" + defineTech();
         alert("No puedes rendir este examen. Debe pasar un mes desde tu ultima vez.")
       } else {
-        window.location.href = "/exam/" + defineTech();
+        window.location.href = "/exam/" + tech;
       }
     }
     async function navigateTo(url) {
@@ -215,9 +216,7 @@
     }
     function defineTech() {
       const url = window.location.href;
-      if (url.includes("javascript")) return "Javascript";
-      if (url.includes("typescript")) return "Typescript";
-      if (url.includes("design_patterns")) return "Patrones Diseño OOP";
+      if (url.includes("javascript")) return "javascript";
     }
 
     function setActive(tech) {
@@ -238,15 +237,12 @@
       <img id="logo-img" width="150px" src="http://localhost:3000/images/logo.png" style="border-radius: 10px" />
     </div>
     <ul class="menu-items">
-      <li onclick="navigateTo('/content/javascript/1')" class="menu-item" id="menu-item-javascript">
-        Javascript
-      </li>
-      <li onclick="navigateTo('/content/typescript/1')" class="menu-item">
-        Typescript
-      </li>
-      <li onclick="navigateTo('/content/design_patterns/1')" class="menu-item">
-        Patrones de Diseño
-      </li>
+      <% techs.forEach((tech)=> { %>
+        <li onclick="navigateTo('/content/<%= tech.filename %>/' + localStorage.getItem('minibit-token'))"
+          class="menu-item" id="menu-item-<%= tech.filename %>">
+          <%= tech.name %>
+        </li>
+        <% }); %>
     </ul>
     <button onclick="takeTest()" class="take-test-button" id="take-test-button-id"></button>
   </nav>
