--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,6 +11,7 @@
       padding: 0;
       box-sizing: border-box;
       font-family: Arial, sans-serif;
+      font-size: 12px;
     }
 
     body {
@@ -21,6 +22,7 @@
       height: 100vh;
       background: url("/images/background.jpg") no-repeat center center fixed;
       background-size: cover;
+      overflow: hidden;
     }
 
     .admin-container {
@@ -37,6 +39,42 @@
       background-color: #fff;
       border: 1px solid #ddd;
       border-radius: 10px;
+    }
+
+    .users-container {
+      height: 700px;
+      width: 600px;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      display: none;
+    }
+
+    .user-header {
+      width: 100%;
+      height: 80px;
+    }
+
+    .user-item {
+      width: 98%;
+      margin-left: 1%;
+      padding: 10px;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border-bottom: 1px solid #ddd;
+      cursor: pointer;
+      border-radius: 8px;
+    }
+
+    .user-item:hover {
+      background-color: #f1f1f1;
+    }
+
+    .user-items-container {
+      width: 100%;
+      height: 610px;
+      overflow-y: scroll;
     }
 
     .exam-results-header {
@@ -72,12 +110,39 @@
       border-radius: 50%;
       background-color: red;
     }
+
+    .lateral-menu {
+      height: 400px;
+      width: 200px;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      margin-right: 30px;
+      padding-top: 30px;
+
+      & div {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      & div:hover {
+        background-color: #f1f1f1;
+      }
+    }
   </style>
 </head>
 
 <body>
   <div class="admin-container">
-    <div class="exam-results">
+    <div class="lateral-menu">
+      <div onclick="displayContainers('resultados')">Resutados</div>
+      <div onclick="displayContainers('usuarios')">Usuarios</div>
+    </div>
+    <div id="exam-results-id" class="exam-results">
       <div class="exam-results-header"></div>
       <div class="exam-results-items-container">
         <% results.forEach((result)=> { %>
@@ -97,12 +162,36 @@
             <div class="color-ref"></div>
           </div>
           <% }); %>
+      </div>
+    </div>
 
+    <div id="users-container-id" class="users-container">
+      <div class="user-header"></div>
+      <div class="user-items-container">
+        <% users.forEach((user)=> { %>
+          <div class="user-item">
+            <span><b>
+                <%= user.email %>
+              </b>
+            </span>
+            <span>
+               Contraseña: <%= user.password %>
+            </span>
+          </div>
+          <% }); %>
       </div>
     </div>
   </div>
 </body>
 <script>
+  const displayContainers = (container) => {
+    document.getElementById("exam-results-id").style.display = "none"
+    document.getElementById("users-container-id").style.display = "none"
+
+    if (container == "usuarios") document.getElementById("users-container-id").style.display = "block"
+    if (container == "resultados") document.getElementById("exam-results-id").style.display = "block"
+  }
+
 </script>
 
 </html>
