--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -52,7 +52,27 @@
 
     .user-header {
       width: 100%;
-      height: 80px;
+      height: 100px;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+      margin-bottom: 20px;
+    }
+
+    .user-header-form {
+      margin-top: 10px;
+      width: 100%;
+      height: 40px;
+      display: flex;
+      gap: 15px;
+      align-items: center;
+
+      & span {
+        cursor: pointer;
+      }
+
+      & span:hover {
+        font-weight: bold;
+      }
     }
 
     .user-item {
@@ -60,11 +80,23 @@
       margin-left: 1%;
       padding: 10px;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-around;
       align-items: center;
       border-bottom: 1px solid #ddd;
       cursor: pointer;
-      border-radius: 8px;
+
+      & span {
+        width: 30%;
+      }
+
+      & span:last-child {
+        text-align: right;
+        cursor: pointer;
+      }
+
+      & span:last-child:hover {
+        font-weight: bold;
+      }
     }
 
     .user-item:hover {
@@ -73,7 +105,7 @@
 
     .user-items-container {
       width: 100%;
-      height: 610px;
+      height: 550px;
       overflow-y: scroll;
     }
 
@@ -133,6 +165,15 @@
         background-color: #f1f1f1;
       }
     }
+
+    input {
+      width: 150px;
+      height: 30px;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 12px;
+    }
   </style>
 </head>
 
@@ -144,7 +185,7 @@
     </div>
     <div id="exam-results-id" class="exam-results">
       <div class="exam-results-header"></div>
-      <div class="exam-results-items-container">
+      <div id="exam-results-items-container-id" class="exam-results-items-container">
         <% results.forEach((result)=> { %>
           <div class="exam-results-item">
             <span>
@@ -166,8 +207,15 @@
     </div>
 
     <div id="users-container-id" class="users-container">
-      <div class="user-header"></div>
-      <div class="user-items-container">
+      <div class="user-header">
+        <span>Crear usuario:</span>
+        <div class="user-header-form">
+          <input type="text" id="email" placeholder="Email" />
+          <input type="text" id="password" placeholder="Contraseña" />
+          <span onclick="createUser()">+ Crear</span>
+        </div>
+      </div>
+      <div id="user-items-container-id" class="user-items-container">
         <% users.forEach((user)=> { %>
           <div class="user-item">
             <span><b>
@@ -175,8 +223,9 @@
               </b>
             </span>
             <span>
-               Contraseña: <%= user.password %>
+              Contraseña: <%= user.password %>
             </span>
+            <span>Eliminar</span>
           </div>
           <% }); %>
       </div>
@@ -192,6 +241,55 @@
     if (container == "resultados") document.getElementById("exam-results-id").style.display = "block"
   }
 
+  const createUser = () => {
+
+    const email = document.getElementById("email").value || "";
+    const password = document.getElementById("password").value || "";
+
+    if (!email || !password) {
+      alert("Datos incorrectos");
+      return;
+    }
+
+    fetch(`${window.location.protocol}//${window.location.host}/create-user`, {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        token: localStorage.getItem("minibit-token"),
+      },
+      body: JSON.stringify({
+        email: email,
+        password: password,
+      }),
+    }).then((response) => {
+
+      if (!response.ok) {
+        alert("Lo sentimos, algo falló.");
+        return
+      }
+
+      alert("Usuario creado");
+
+      const userContainer = document.getElementById("user-items-container-id")
+
+      userContainer.innerHTML += `<div class="user-item">
+            <span><b>
+                ${email}
+              </b>
+            </span>
+            <span>
+              Contraseña: ${password}
+            </span>
+            <span>Eliminar</span>
+          </div>`
+
+      document.getElementById("email").value = "";
+      document.getElementById("password").value = "";
+
+    }).catch(() => {
+      alert("Lo sentimos, algo falló.");
+    });
+  }
 </script>
 
 </html>
