--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -216,13 +216,13 @@
       margin-left: 1%;
       padding: 10px;
       display: flex;
-      justify-content: space-around;
+      justify-content: flex-start;
       align-items: center;
       border-bottom: 1px solid #ddd;
       cursor: pointer;
 
       & span {
-        width: 30%;
+        width: 100px;
       }
 
       & span:last-child {
@@ -240,6 +240,7 @@
     }
 
     .tests-items-container {
+      padding-top: 20px;
       width: 100%;
       height: 550px;
       overflow-y: scroll;
@@ -321,6 +322,7 @@
     }
 
     .tests-container-form {
+      display: none;
       width: 80%;
       left: 10%;
       padding: 5%;
@@ -332,9 +334,17 @@
       z-index: 10;
       background-color: white;
       overflow-y: scroll;
+
+      & .close-cross {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        font-size: 20px;
+      }
     }
 
-    .answer-block-container{
+    .answer-block-container {
       width: 100%;
       display: flex;
       justify-content: center;
@@ -435,16 +445,24 @@
     </div>
 
     <div id="tests-container-id" class="tests-container">
-      <div class="tests-header">
-        <span>Preguntas</span>
-        <div class="tests-header-form">
-        </div>
-      </div>
       <div id="tests-items-container-id" class="tests-items-container">
+        <% content.forEach((con)=> { %>
+          <div onclick="openQuestionModal()" class="tests-item">
+            <span><b>
+                <%= con.name %>
+              </b>
+            </span>
+            <span><b>
+                <%= con.name %>
+              </b>
+            </span>
+          </div>
+          <% }); %>
       </div>
     </div>
 
     <div id="tests-container-id-form" class="tests-container-form">
+      <span onclick="closeQuestionModal()" class="close-cross">x</span>
       <div class="answer-block-container">
         <div class="answer-block">
           <p>Pregunta 1</p><br />
@@ -662,7 +680,12 @@
           <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
           <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
           <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
+          <select>
+            <option>A</option>
+            <option>B</option>
+            <option>C</option>
+            <option>D</option>
+          </select>
         </div>
       </div>
     </div>
@@ -671,6 +694,15 @@
   </div>
 </body>
 <script>
+  const openQuestionModal = () => {
+    document.getElementById("tests-container-id-form").style.display = "block"
+  }
+
+  const closeQuestionModal = () => {
+    document.getElementById("tests-container-id-form").style.display = "none"
+  }
+
+
   const displayContainers = (container) => {
     document.getElementById("exam-results-id").style.display = "none"
     document.getElementById("users-container-id").style.display = "none"
