--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -466,234 +466,74 @@
       <div class="answer-block-container">
         <div class="answer-block">
           <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
+          <textarea id="question_1_id" placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input id="answer_1_a_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta A" /><br />
+          <span>B</span><input id="answer_1_b_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta B" /><br />
+          <span>C</span><input id="answer_1_c_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta C" /><br />
+          <span>D</span><input id="answer_1_d_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta D" /><br />
+          <select id="correct_answer_1_id">
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
+          </select>
         </div>
         <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-      </div>
-      <div class="answer-block-container">
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select></select>
-        </div>
-        <div class="answer-block">
-          <p>Pregunta 1</p><br />
-          <textarea placeholder="Escriba pregunta"></textarea><br />
-          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
-          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
-          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
-          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
-          <select>
-            <option>A</option>
-            <option>B</option>
-            <option>C</option>
-            <option>D</option>
+          <p>Pregunta 2</p><br />
+          <textarea id="question_2_id" placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input id="answer_2_a_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta A" /><br />
+          <span>B</span><input id="answer_2_b_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta B" /><br />
+          <span>C</span><input id="answer_2_c_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta C" /><br />
+          <span>D</span><input id="answer_2_d_id" type="text" class="answer-input" id="content-name"
+            placeholder="Respuesta D" /><br />
+          <select id="correct_answer_2_id">
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
           </select>
         </div>
       </div>
+      <button onclick="postQuestions()">Enviar</button>
     </div>
 
 
   </div>
 </body>
 <script>
+  const postQuestions = async () => {
+    const payload = [1, 2].map((i, index) => {
+      return {
+        question: document.getElementById(`question_${i}_id`).value,
+        answer_a: document.getElementById(`answer_${i}_a_id`).value,
+        answer_b: document.getElementById(`answer_${i}_b_id`).value,
+        answer_c: document.getElementById(`answer_${i}_c_id`).value,
+        answer_d: document.getElementById(`answer_${i}_d_id`).value,
+        correct_answer: document.getElementById(`answer_${i}_d_id`).value,
+      }
+    })
+
+    console.log(payload)
+
+    const response = await fetch('/post-questions', {
+      method: 'POST',
+      headers: {
+        "Content-Type": "application/json",
+        token: localStorage.getItem("minibit-token"),
+      },
+      body: JSON.stringify({
+        payload: payload
+      })
+    });
+
+  }
   const openQuestionModal = () => {
     document.getElementById("tests-container-id-form").style.display = "block"
   }
