--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -523,7 +523,7 @@
               </b>
             </span>
             <a target="_blank" href="${window.location.protocol}//${window.location.host}/content-files/${tech.filename}">pdf</a>
-           <span>Eliminar</span>
+           <span onclick="deleteContent(${tech.content_id})">Eliminar</span>
           </div>`
     })
   }
@@ -572,6 +572,26 @@
       alert("Usuario eliminado.")
     });
   }
+
+  const deleteContent = async (id) => {
+    const response = await fetch('/delete-content', {
+      method: 'POST',
+      headers: {
+        "Content-Type": "application/json",
+        token: localStorage.getItem("minibit-token"),
+      },
+      body: JSON.stringify({
+        contentId: id,
+      })
+    }).then(() => {
+      alert("Contenido eliminado.")
+      content_techs = content_techs.filter((tech) => tech.content_id != id)
+      showContent()
+    }).catch(() => {
+      alert("Algo fallo.")
+    });
+  }
+
 
   const openQuestionModal = (id) => {
     contentId = id;
@@ -633,19 +653,15 @@
 
       if (response.ok) {
         const result = await response.json();
-        console.log('Upload successful:', result);
-        alert('File uploaded successfully!');
-        content_techs.push({ name: result.name, filename: result.filename })
+        alert('Contenido subido exitosamente.');
+        content_techs.push({ name: result.name, filename: result.filename, content_id: result.id })
         showContent()
       } else {
         throw new Error('Upload failed');
       }
     } catch (error) {
-      console.error('Error uploading file:', error);
-      alert('Error uploading file');
+      alert('Algo fallo.');
     }
-
-
   }
 
   const createUser = () => {
