--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -415,18 +415,7 @@
         </div>
       </div>
       <div id="user-items-container-id" class="user-items-container">
-        <% users.forEach((user)=> { %>
-          <div class="user-item">
-            <span><b>
-                <%= user.email %>
-              </b>
-            </span>
-            <span>
-              Contraseña: <%= user.password %>
-            </span>
-            <span onclick="deleteUser('<%= user.id %>')">Eliminar</span>
-          </div>
-          <% }); %>
+
       </div>
     </div>
 
@@ -512,6 +501,7 @@
   var contentId = null;
   var content = <%- JSON.stringify(content) %>;
   var content_techs = <%- JSON.stringify(content_techs) %>;
+  var users = <%- JSON.stringify(users) %>;
 
   const showContent = () => {
     const contentContainer = document.getElementById("content-items-container-id")
@@ -528,8 +518,26 @@
     })
   }
 
+  const showUsers = () => {
+    const userContainer = document.getElementById("user-items-container-id")
+    userContainer.innerHTML = "";
+    users.forEach((user) => {
+      userContainer.innerHTML += `<div class="user-item">
+            <span><b>
+                ${user.email}
+              </b>
+            </span>
+            <span>
+              Contraseña: ${user.password}
+            </span>
+            <span onclick="deleteUser('${user.id}')">Eliminar</span>
+          </div>`
+    })
+  }
+
   setTimeout(() => {
     showContent()
+    showUsers()
   }, 100)
 
   const postQuestions = async (id) => {
@@ -570,6 +578,8 @@
       })
     }).then(() => {
       alert("Usuario eliminado.")
+      users = users.filter((user) => Number(user.id) !== Number(id))
+      showUsers()
     });
   }
 
@@ -664,7 +674,7 @@
     }
   }
 
-  const createUser = () => {
+  const createUser = async () => {
 
     const email = document.getElementById("email").value || "";
     const password = document.getElementById("password").value || "";
@@ -684,7 +694,7 @@
         email: email,
         password: password,
       }),
-    }).then((response) => {
+    }).then(async (response) => {
 
       if (!response.ok) {
         alert("Lo sentimos, algo falló.");
@@ -693,18 +703,13 @@
 
       alert("Usuario creado");
 
+      const result = await response.json();
+
       const userContainer = document.getElementById("user-items-container-id")
 
-      userContainer.innerHTML += `<div class="user-item">
-            <span><b>
-                ${email}
-              </b>
-            </span>
-            <span>
-              Contraseña: ${password}
-            </span>
-            <span>Eliminar</span>
-          </div>`
+      users.push({ email: email, password: password, id: result.user })
+
+      showUsers()
 
       document.getElementById("email").value = "";
       document.getElementById("password").value = "";
